--- a/page19.html
+++ b/page19.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-4o" data-rv-view="329">
+<section id="menu-4o" data-rv-view="337">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="333" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="341" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="336" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="344" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="331" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="339" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
