--- a/page23.html
+++ b/page23.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-5w" data-rv-view="395">
+<section id="menu-5w" data-rv-view="403">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5y" data-rv-view="399" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5y" data-rv-view="407" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5z" data-rv-view="402" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5z" data-rv-view="410" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5x" data-rv-view="397" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5x" data-rv-view="405" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
