--- a/page43.html
+++ b/page43.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-ey" data-rv-view="5090">
+<section id="menu-ey" data-rv-view="20">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="5094" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/b">free web site creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="24" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-f1" custom-code="true" data-rv-view="5097"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-f1" custom-code="true" data-rv-view="27"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -132,7 +132,7 @@
             new Result("Dr. Doyle", "Like Dr. Doyle, you have a bright personality which is why people enjoy being around you.", [15, 23, 25, 31, 32, 45, 46, 51, 55]),
             new Result("Madame Lariviere", "Like Madame Lariviere, you get super excited by doing what you love, sometimes even to the point of jumping up and down.", [16, 22, 35, 36, 44, 45, 46, 54]),
             new Result("Mr. Prowse", "Like Mr. Prowse, your sarcasm and dad jokes have no end.", [11, 12, 21, 23, 34, 35, 36, 41, 46, 53]),
-            new Result("Mr. Graham", "Like Mr. Graham, your personality can fill any room.", [14, 15, 23, 24, 32, 33, 44, 45, 46, 54]),
+            new Result("Mr. Graham", "Like Mr. Graham, your personality can fill any room.", [14, 15, 23, 24, 31, 32, 44, 45, 46, 52, 54]),
             new Result("Mr. van Rijn", "Like Mr. van Rijn, you take everything in life in a humourous way.", [12, 15, 22, 33, 41, 52]),
             new Result("Coach D", "Like Coach D, you are very calm while still being very fun to be around and people love you for it.", [16, 23, 32, 42, 45, 52]),
             new Result("Mr. Mitchell", "Like Mr. Mitchell, you are very passionate and tell others what you really think.", [14, 24, 34, 42, 43, 56]),
@@ -363,7 +363,7 @@
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="53" onclick="check(this.id);">
                     <label for="53">
-                        <div class="text-container"><h1 class="text-answer">Water Polo</h1></div></label></div></th>
+                        <div class="text-container"><h1 class="text-answer">Swimming</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="54" onclick="check(this.id);">
                     <label for="54">
@@ -391,7 +391,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="5092" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="22" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
